--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Memory Game</title>
 </head>
 <body>
+    <div class="game-info">
+      <h3>score: <span id="score"></span>0</h3>
+      <h3>time: <span id="time">00:00</span></h3>
+    </div>
+    <div id="grid"></div>
     
     <script src="assets/js/app.js"></script>
 </body>
