--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <h3>score: <span id="score"></span>0</h3>
       <h3>time: <span id="time">00:00</span></h3>
     </div>
+    <div class="levels">
+        <button id="level1">Level 1</button>
+        <button id="level2">Level 2</button>
+        <button id="level3">Level 3</button>
+    </div>
     <div id="grid"></div>
     
     <script src="assets/js/app.js"></script>
